@@ -384,31 +384,51 @@
 <div class="faq_wrap gene">
 	<div class="faq_links_wrap">
 		<h1 class="c">Frequently Asked <b>Generator</b> Questions</h1>
-		<a href="#tech1">Which transaction types are used/not used in d-portal?</a>
-		<a href="#tech2">How/where is the data tidied up before being displayed in d-portal?</a>
-		<a href="#tech3">How is data apportioned to a specific year?</a>
-		<a href="#tech4">What counts as a ‘missing project’?</a>
-		<a href="#tech5">How are exchange rates calculated?</a>
-		<a href="#tech6">What are the criteria for my organisation’s data appearing in recipient country charts/tables/maps in d-portal?</a>
-		<a href="#tech7">Where do country codes/descriptions come from?</a>
-		<a href="#tech8">What classifies something as an active, ended or planned project?</a>
-		<a href="#tech9">How is the map data produced?</a>
-		<a href="#tech10">How are US government organisations shown?</a>
-		<a href="#tech11">Where does the data for single activity (SAVi) page come from?</a>
-		<a href="#tech12">Where can I find the code/README/project management information for d-portal?</a>
-		<a href="#tech13">Where is the additional data for d-portal stored?</a>
-		<a href="#tech14">When is ctrack updated?</a>
-		<a href="#tech15">What counts as 2014 (chart) data?</a>
+		<a href="#gene1">What is it?</a>
+		<a href="#gene2">Why does it exist?</a>
+		<a href="#gene3">How do I use it?</a>
+		<a href="#gene4">How often will the generated content on my webpage update?</a>
+		<a href="#gene5">How reliable is it?</a>
 	</div>
 	
 	<ul class="faq_list">
 		<li>
-			<span id="tech1"></span>
-			<span class="list">Which transaction types are used/not used in d-portal?</span>
+			<span id="gene1"></span>
+			<span class="list">What is it?</span>
 			<span class="info">
-				‘Expenditure’ and ‘Disbursements’ for Spend columns/data.  If there are neither, but ‘Commitment’ data exists, then the Commitment data will be shown.
+				A tool to help users to reproduce data from d-portal in other webpages/blogs.
+			</span>
+		</li>
+		<li>
+			<span id="gene2"></span>
+			<span class="list">Why does it exist?</span>
+			<span class="info">
+				To help users who want to display their own data, or data they are interested in, within their own website/blog.
+			</span>
+		</li>
+		<li>
+			<span id="gene3"></span>
+			<span class="list">How do I use it?</span>
+			<span class="info">
+				Make selections from the dropdown menus and C&amp;P the code provided into your webpage’s html.
+				
+				<p>For more information see <a href="http://www.d-portal.org/news/2014-11-30-Interactive-IATI-data-d-portal-generator.html">http://www.d-portal.org/news/2014-11-30-Interactive-IATI-data-d-portal-generator.html</a></p>
+			</span>
+		</li>
+		<li>
+			<span id="gene4"></span>
+			<span class="list">How often will the generated content on my webpage update?</span>
+			<span class="info">
+				It’s dynamic, so will update automatically overnight. If you change your data, this will be reflected. So when you’ve got content from the generator in your site or blog post, it will change accordingly!
+			</span>
+		</li>
+		<li>
+			<span id="gene5"></span>
+			<span class="list">How reliable is it?</span>
+			<span class="info">
+				The embedded data in your blog post / website will stay up as long as the d-portal site is up (eg permanently).
 
-				<p>‘Budgets’ in activity file, for Budget columns/data (eg in tables on d-portal) - if no budget data is present in the activity file, then ‘planned-disbursements’ are used if present.</p>
+				<p>The only time this can go wrong is if your website provider disallows you to include external widgets in your blog posts, ie. if you can embed a youtube video into your blog post, you can embed generator content in your post.</p>
 			</span>
 		</li>
 	</ul>
