@@ -1,7 +1,7 @@
 Development Portal (2015-09-03 shi)
 ==============================
-Change settings text visible next to cog icon
-Change View map link on main pages to entire div
+Changed settings text visible next to cog icon
+Changed View map link on main pages to entire div
 
 
 Development Portal (2015-09-02 shi)
