@@ -1,7 +1,8 @@
 Static site (2015-09-03 shi)
 ==============================
 FAQ page layout styles
-Added general and technical questions to FAQ
+Added General and Technical questions to FAQ
+Added Generator questions to FAQ
 
 
 Static site (2015-09-02 shi)
